syntax = "proto3";

option java_multiple_files = true;
option java_package = "akka.ask.agent.api";

package akka.ask.agent.api;

message QueryRequest {
  string userId = 1;
  string sessionId = 2;
  string question = 3;
}

message QueryResponse {
  string answer = 1;
}

service AskGrpcEndpoint {
  rpc Ask (QueryRequest) returns (stream QueryResponse) {}
}